--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Basic HTML Page</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to OSC</h1>
     <p>This is a basic HTML page.</p>
    
    <p> what are you doing down here.</p>
