--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Welcome to OSC</h1>
     <p>This is a basic HTML page.</p>
-   
+   <p>This is a place for Peace.</p>
+    <p>We are all here to learn and grow together.</p>
    <p> what are you doing down here.</p>
 </body>
 </html> 
