triyng something new

--- a/index.html
+++ b/index.html
@@ -10,20 +10,9 @@
     <p>This is a basic HTML page.</p>
    <p>This is a place for Peace.</p>
     <p>We are all here to learn and grow together.</p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
-   <p> what are you doing down here.</p>
+    <p style="position: fixed; bottom: 0; width: 100%; text-align: center;">
+    what are you doing down here.
+</p>
+
 </body>
 </html> 
