to connect with other html learning

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Page</title>
+  <title>About Me</title>
 </head>
 <body>
-    <h1>Welcome to OSC</h1>
-    <p>This is a basic HTML page.</p>
-   <p>This is a place for Peace.</p>
-    <p>We are all here to learn and grow together.</p>
-    <p style="position: fixed; bottom: 0; width: 100%; text-align: center;">
-    what are you doing down here.
-</p>
+  <nav>
+    <a href="/">Brown Bear</a>
+    <!-- web browsers respond to index.html and / the same way -->
+    <a href="./aboutme.html">About Me</a>
+  </nav>
 
+<h1>About Me</h1>
+<h3>Admin Ghimire</h3>
+<img src="https://content.codecademy.com/courses/web-101/htmlcss1-img_brown-bear-2.jpeg">
+
+  <!-- A section that describes the brown bear -->
+  <p>Hey, my name is Admin, and there's lots I find more exciting than bears such as Valorant. I've never spent my life traveling the Earth or take videos of these wonderful creatures.   <br /> <br />
+
+  	Family, Valorant, Studys, <br /> <br />
+    Admin G.
+
+  </p>
 </body>
-</html> 
+</html>
