--- a/index(coding-academy).html
+++ b/index(coding-academy).html
@@ -7,8 +7,8 @@
 
 <body>
   <nav>
-    <a href="./index.html">Brown Bear</a>
-    <a href="./aboutme.html">About Me</a>
+    <a href="index(coding-academy).html">Brown Bear</a>
+    <a href="./index.html">About Me</a>
   </nav>
   <h1>The Brown Bear</h1>
   <nav>
