--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav>
-    <a href="/">Brown Bear</a>
+    <a href="index(coding-academy).html">Brown Bear</a>
     <!-- web browsers respond to index.html and / the same way -->
     <a href="./aboutme.html">About Me</a>
   </nav>
